@@ -337,6 +337,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   a POST request
 * (bug 18099) Using appendtext to edit a non-existent page causes an interface
   message to be included in the page text
+* Fixed the circular template inclusion check, was broken when the loop 
+  involved redirects. Without this, infinite recursion within the parser is
+  possible.
 
 === Languages updated in 1.15 ===
 
